fix select/header z-index glitch that was hiding the top of the select boxes under the header

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -23,7 +23,7 @@ html {
 header {
   background-color: #212121;
   padding: 48px;
-  z-index: 10000;
+  z-index: 1101;
   width: 100%;
 }
 
